<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tool_tip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/locationHeaderOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/statusImgOnMAP"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/descripOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/statusImgOnMAP"
            android:text="@string/hello_world"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/dateOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descripOnMap"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/statusImgOnMAP"
            android:text="@string/hello_world"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/minTempLayOutOnMAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateOnMap"
            android:layout_marginLeft="10dp"
          
            android:layout_toRightOf="@+id/statusImgOnMAP"
            android:weightSum="1" >

            <TextView
                android:id="@+id/minTempOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_temparature"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/minTempOnMapValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/hello_world"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/minTempLayOutOnMAP"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/statusImgOnMAP"
            android:weightSum="1" >

            <TextView
                android:id="@+id/maxTempOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temparature"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/maxTempOnMapValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/hello_world"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>